--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 
         const response = await fetch('/create', {
             method: 'POST',
+            headers: {
+                "Content-Type": "application/json"
+            },
             body: JSON.stringify(user)
         });
         const res = await response.json();
